tests/compile-fail/compile_fail__type_error__stackless__ternary_arg.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:27:12
   │
27 │       F0 = I1 ? F1 : I0;  
   │            ^^^^^^^^^^^^ this expression not supported by format


